--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>My Data Engineering Portfolio</h2>
-							<p>Visit my LinkedIn profile <a href="https://www.linkedin.com/in/leoneil-bacon/">here</a></p>
+							<p> The data that I chose to process is from chess.com since I am currently got hooked on playing it now. This project generally shows an ETL Process.
+								I split it into three parts. This shows my proficiency on Python, SQL, and PowerBI and conceptual skills in programming and data.
+							</p>
 						</div>
 					</section>
 
@@ -38,7 +40,7 @@
 									<a class="image"><img src="images/pythonlogo.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">DATA EXTRACTION IN PYTHON</h2>
-										<p>API call, data frame, export to SQL</p>
+										<p>Extracting the data using the server's API, cleaning and tranforming it to a structed dataframe, and exporting it as a flat file</p>
 										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/DataExtractionPython.md" class="special">Go to the project</a>
 									</div>
 								</div>
@@ -50,7 +52,7 @@
 									<a class="image"><img src="images/SQLpic.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">DATA MODELING IN SQL</h2>
-										<p>Consolidate the data in structure in a relational detabase set up</p>
+										<p>Consolidate and structure the data in a relational detabase set up</p>
 										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/DataModelingInSQL.md" class="special">Go to the project</a>
 									</div>
 								</div>
@@ -62,7 +64,7 @@
 									<a class="image"><img src="images/powerBI.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">VISUALIZATION IN POWERBI</h2>
-										<p>Getting insights on the data</p>
+										<p>Analyzing and getting insight from the data using powerful visualizations</p>
 										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/VisualizationInPowerBI.md" class="special">Go to the project</a>
 									</div>
 								</div>
