--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<a class="image"><img src="images/pythonlogo.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">DATA EXTRACTION IN PYTHON</h2>
-										<p>Extracting the data using the server's API, cleaning and tranforming it to a structed dataframe, and exporting it as a flat file</p>
+										<p>Extracting the data using the server's API, cleaning and tranforming it to a structured dataframe, and exporting it as a flat file</p>
 										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/DataExtractionPython.md" class="special">Go to the project</a>
 									</div>
 								</div>
