--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									<div class="content">
 										<h2 class="major">DATA EXTRACTION IN PYTHON</h2>
 										<p>Extracting the data using the server's API, cleaning and tranforming it to a structured dataframe, and exporting it as a flat file</p>
-										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/DataExtractionPython.md" class="special">Go to the project</a>
+										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/DataExtractionPython.md" target = _blank class="special">Go to the project</a>
 									</div>
 								</div>
 							</section>
@@ -53,7 +53,7 @@
 									<div class="content">
 										<h2 class="major">DATA MODELING IN SQL</h2>
 										<p>Consolidate and structure the data in a relational detabase set up</p>
-										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/DataModelingInSQL.md" class="special">Go to the project</a>
+										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/DataModelingInSQL.md" target = _blank class="special">Go to the project</a>
 									</div>
 								</div>
 							</section>
@@ -65,7 +65,7 @@
 									<div class="content">
 										<h2 class="major">VISUALIZATION IN POWERBI</h2>
 										<p>Analyzing and getting insight from the data using powerful visualizations</p>
-										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/VisualizationInPowerBI.md" class="special">Go to the project</a>
+										<a href="https://github.com/NeilBacs/DataEngineeringProjects/blob/main/VisualizationInPowerBI.md" target = _blank class="special">Go to the project</a>
 									</div>
 								</div>
 							</section>
